--- a/index.html
+++ b/index.html
@@ -18,16 +18,88 @@
                 <!-- <img src="pen.webp" alt="pen"> -->
             </button>
         </div>
+        <div class="augments">
+            
+        </div>
         <div class="upgrades">
-            <h2>Upgrades</h2>
+            <h2>Store</h2>
             <li>
                 <button class="upgrade" id="auto-clicker">
-                    <span>Auto Clicker</span><br>
-                    <span>Cost: <span id="auto-clicker-cost">50</span></span>   
+                <span class="upgrade-head">Auto Clicker</span><br>
+                    <span class="info">
+                    <span class="cost">Cost: <span id="auto-clicker-cost">30</span> clicks</span>
+                    <span id="auto-clicker-cps" class="cps">+0.2 cps</span>
+                </span>   
                 </button>
-                <button class="upgrade" id="upgrade-2">
-                    <span>Upgrade 2</span><br>
-                    <span>Cost: <span id="upgrade2-cost">500</span></span>
+                <button class="upgrade" id="curious-sibling">
+                    <span class="upgrade-head">Curious/Annoying Sibling<br></span>
+                    <span class="info">
+                    <span class="cost">Cost: <span id="curious-sibling-cost">1000</span> clicks</span>
+                    <span id="annoying-sibling-cps" class="cps">+1 cps</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="personWithAdhd">
+                    <span class="upgrade-head">Person with ADHD<br></span>
+                    <span class="info">
+                    <span class="cost">Cost: <span id="personWithAdhd-cost">500</span> clicks</span>
+                    <span id="personWithAdhd-cps" class="cps">+10 cps</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="twice-as-many-pens">
+                    <span class="upgrade-head">Twice as many pens! - x2 click power</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="twice-as-many-pens-cost">15000</span> clicks</span>
+                        <span id="twice-as-many-pens-cps" class="cps">x2 per click</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="ultra-fast-gamer">
+                    <span class="upgrade-head">Ultra fast gamer - 100 cps</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="ultra-fast-gamer-cost">75000</span> clicks</span>
+                        <span id="ultra-fast-gamer-cps" class="cps">+100 cps</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="laser-machine">
+                    <span class="upgrade-head">Laser machine - 1,000 cps</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="laser-machine-cost">5000000</span> clicks</span>
+                        <span id="laser-machine-cps" class="cps">+1000 cps</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="ahk-file">
+                    <span class="upgrade-head">.ahk file - 15,000 cps</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="ahk-file-cost">50000000</span> clicks</span>
+                        <span id=".ahk-file-cps" class="cps">+15,000 cps</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="click-squared">
+                    <span class="upgrade-head">Click squared - square clicking power</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="click-squared-cost">1000000000</span> clicks</span>
+                        <span id="click-squared-cps" class="cps">click power<sup>2</sup></span>
+                    </span>
+                </button>
+                <button class="upgrade" id="5090">
+                    <span class="upgrade-head">5090 - 1M cps</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="5090-cost">1000000000</span> clicks</span>
+                        <span id="5090-cps" class="cps">+1M cps</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="ufos">
+                    <span class="upgrade-head">UFOs - 25M cps</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="ufos-cost">50000000000</span> clicks</span>
+                        <span id="ufos-cps" class="cps">+25M cps</span>
+                    </span>
+                </button>
+                <button class="upgrade" id="galactic-imports">
+                    <span class="upgrade-head">Galactic imports - 500M cps</span><br>
+                    <span class="info">
+                        <span class="cost">Cost: <span id="galactic-imports-cost">500000000000</span> clicks</span>
+                        <span id="galactic-imports-cps" class="cps">+500M cps</span>
+                    </span>
                 </button>
             </li>
         </div>
