--- a/index.html
+++ b/index.html
@@ -8,100 +8,105 @@
 </head>
 <body>
     <div class="main">
-        <div class="click">
-            <div class="cookie-count">
-                <h1>Pen Clicker</h1>
-                <h2>CLICKS: <span id="clicks">0</span></h2>
-                <h2>CPS: <span id="cps">0</span></h2>
+        <div class="horizontal">
+            <div class="click">
+                <div class="cookie-count">
+                    <h1>Pen Clicker</h1>
+                    <h2>CLICKS: <span id="clicks">0</span></h2>
+                    <h2>CPS: <span id="cps">0</span></h2>
+                </div>
+                <button id="clicker">
+                    <!-- <img src="pen.webp" alt="pen"> -->
+                </button>
             </div>
-            <button id="clicker">
-                <!-- <img src="pen.webp" alt="pen"> -->
-            </button>
-        </div>
-        <div class="upgrades">
-            <h2>Store</h2>
-            <li>
-                <button class="upgrade" id="auto-clicker">
-                <span class="upgrade-head">Auto Clicker</span><br>
-                    <span class="info">
-                    <span class="cost">Cost: <span id="auto-clicker-cost">30</span> clicks</span>
-                    <span id="auto-clicker-cps" class="cps">+<span id="cps">0.2</span> cps</span>
-                </span>   
-                </button>
-                <button class="upgrade" id="curious-sibling">
-                    <span class="upgrade-head">Curious/Annoying Sibling<br></span>
-                    <span class="info">
-                    <span class="cost">Cost: <span id="curious-sibling-cost">1000</span> clicks</span>
-                    <span id="annoying-sibling-cps" class="cps">+<span id="cps"></span>1 cps</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="personWithAdhd">
-                    <span class="upgrade-head">Person with ADHD<br></span>
-                    <span class="info">
-                    <span class="cost">Cost: <span id="personWithAdhd-cost">500</span> clicks</span>
-                    <span id="personWithAdhd-cps" class="cps">+<span id="cps"></span>10 cps</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="twice-as-many-pens">
-                    <span class="upgrade-head">Twice as many pens!</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="twice-as-many-pens-cost">15000</span> clicks</span>
-                        <span id="twice-as-many-pens-cps" class="cps">x2 per click</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="ultra-fast-gamer">
-                    <span class="upgrade-head">Ultra fast gamer</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="ultra-fast-gamer-cost">75000</span> clicks</span>
-                        <span id="ultra-fast-gamer-cps" class="cps">+<span id="cps">100</span> cps</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="laser-machine">
-                    <span class="upgrade-head">Laser machine</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="laser-machine-cost">5000000</span> clicks</span>
-                        <span id="laser-machine-cps" class="cps">+<span id="cps">1000</span> cps</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="ahk-file">
-                    <span class="upgrade-head">.ahk file</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="ahk-file-cost">50000000</span> clicks</span>
-                        <span id=".ahk-file-cps" class="cps">+<span id="cps">15,000</span> cps</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="click-squared">
-                    <span class="upgrade-head">Click squared</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="click-squared-cost"></span> clicks</span>
-                        <span id="click-squared-cps" class="cps">click power<sup>2</sup></span>
-                    </span>
-                </button>
-                <button class="upgrade" id="5090">
-                    <span class="upgrade-head">5090</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="5090-cost">1000000000</span> clicks</span>
-                        <span id="5090-cps" class="cps">+<span id="cps">1M</span> cps</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="ufos">
-                    <span class="upgrade-head">UFOs</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="ufos-cost">50000000000</span> clicks</span>
-                        <span id="ufos-cps" class="cps">+<span id="cps">25M</span> cps</span>
-                    </span>
-                </button>
-                <button class="upgrade" id="galactic-imports">
-                    <span class="upgrade-head">Galactic imports</span><br>
-                    <span class="info">
-                        <span class="cost">Cost: <span id="galactic-imports-cost">500000000000</span> clicks</span>
-                        <span id="galactic-imports-cps" class="cps">+<span id="cps">500M</span> cps</span>
-                    </span>
-                </button>
-            </li>
+            <div class="upgrades">
+                <h2 class="store">Store</h2>
+                <li>
+                    <button class="upgrade" id="auto-clicker">
+                    <span class="upgrade-head">Auto Clicker</span><br>
+                        <span class="info">
+                        <span class="cost">Cost: <span id="auto-clicker-cost">30</span> clicks</span>
+                        <span class="cps">+<span id="auto-clicker-cps">0.2</span> cps</span>
+                    </span>   
+                    </button>
+                    <button class="upgrade" id="curious-sibling">
+                        <span class="upgrade-head">Curious/Annoying Sibling<br></span>
+                        <span class="info">
+                        <span class="cost">Cost: <span id="curious-sibling-cost">1000</span> clicks</span>
+                        <span id="cps" class="cps">+<span id="curious-sibling-cps">5s</span> cps</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="personWithAdhd">
+                        <span class="upgrade-head">Person with ADHD<br></span>
+                        <span class="info">
+                        <span class="cost">Cost: <span id="personWithAdhd-cost">500</span> clicks</span>
+                        <span id="cps" class="cps">+<span id="personWithAdhd-cps">10</span> cps</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="twice-as-many-pens">
+                        <span class="upgrade-head">Twice as many pens!</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="twice-as-many-pens-cost">15000</span> clicks</span>
+                            <span id="cps" class="twice-as-many-pens-cps">x2 per click</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="ultra-fast-gamer">
+                        <span class="upgrade-head">Ultra fast gamer</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="ultra-fast-gamer-cost">75000</span> clicks</span>
+                            <span id="cps" class="cps">+<span id="ultra-fast-gamer-cps">100</span> cps</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="laser-machine">
+                        <span class="upgrade-head">Laser machine</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="laser-machine-cost">5000000</span> clicks</span>
+                            <span id="cps" class="cps">+<span id="laser-machine-cps">1000</span> cps</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="ahk-file">
+                        <span class="upgrade-head">.ahk file</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="ahk-file-cost">50000000</span> clicks</span>
+                            <span id="cps" class="cps">+<span id=".ahk-file-cps">15,000</span> cps</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="click-squared">
+                        <span class="upgrade-head">Click squared</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="click-squared-cost"></span> clicks</span>
+                            <span id="cps" class="cps">click power<sup id="click-squared-cps">2</sup></span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="5090">
+                        <span class="upgrade-head">5090</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="5090-cost">1000000000</span> clicks</span>
+                            <span id="cps" class="cps">+<span id="5090-cps">1M</span> cps</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="ufos">
+                        <span class="upgrade-head">UFOs</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="ufos-cost">50000000000</span> clicks</span>
+                            <span id="cps" class="cps">+<span id="ufos-cps">25M</span> cps</span>
+                        </span>
+                    </button>
+                    <button class="upgrade" id="galactic-imports">
+                        <span class="upgrade-head">Galactic imports</span><br>
+                        <span class="info">
+                            <span class="cost">Cost: <span id="galactic-imports-cost">500000000000</span> clicks</span>
+                            <span id="cps" class="cps">+<span id="galactic-imports-cps">500M</span> cps</span>
+                        </span>
+                    </button>
+                </li>
+            </div>
         </div>
         <div class="augments">
-            
+            <h2 class="augments-store">Augments</h2>
+            <ul id="augment-list">
+                
+            </ul>
         </div>
     </div>
     <script src="script.js"></script>
